# QuanLyDanhBaDienThoai

./: README.md
QuanLyDanhBa/: QuanLyDanhBa.sln
QuanLyDanhBa/QuanLyDanhBa/: DanhBa.cpp  DanhBa.h  LienHe.cpp  LienHe.h  QuanLyDanhBa.vcxproj  QuanLyDanhBa.vcxproj.filters  README.md  danhba.txt  main.cpp
QuanLyDanhBaDienThoai/: CMakeLists.txt
QuanLyDanhBaDienThoai/src/: Contact.cpp  Contact.h  Phonebook.cpp  Phonebook.h  main.cpp
build-QuanLyDanhBaGD_GD-Desktop_Qt_6_6_1_MinGW_64_bit-Debug/: .ninja_deps  .ninja_log  CMakeCache.txt  build.ninja  cmake_install.cmake  danhba.txt
build-QuanLyDanhBaGD_GD-Desktop_Qt_6_6_1_MinGW_64_bit-Debug/.cmake/api/v1/reply/: cache-v2-a9ac05457c52195d5c65.json  codemodel-v2-e3f46e3e75d33f7ed97f.json  directory-.-Debug-920907290b202d6db26b.json  index-2024-08-18T08-26-17-0150.json  (+3 more)
build-QuanLyDanhBaGD_GD-Desktop_Qt_6_6_1_MinGW_64_bit-Debug/.cmake/api/v1/reply.prev/: cmakeFiles-v1-93030368678af1a95f8d.json  codemodel-v2-affdd420385a30c5c43c.json  directory-.-Debug-4e558bc5c176e75ac826.json  index-2024-08-18T08-25-59-0204.json  target-QuanLyDanhBaGD_GD-Debug-5bf2a1840638900187d5.json
build-QuanLyDanhBaGD_GD-Desktop_Qt_6_6_1_MinGW_64_bit-Debug/.qt/: QtDeploySupport.cmake
build-QuanLyDanhBaGD_GD-Desktop_Qt_6_6_1_MinGW_64_bit-Debug/QuanLyDanhBaGD_GD_autogen/: deps
build-QuanLyDanhBaGD_GD-Desktop_Qt_6_6_1_MinGW_64_bit-Debug/QuanLyDanhBaGD_GD_autogen/EWIEGA46WW/: moc_mainwindow.cpp  moc_mainwindow.cpp.d
build-QuanLyDanhBaGD_GD-Desktop_Qt_6_6_1_MinGW_64_bit-Debug/QuanLyDanhBaGD_GD_autogen/include/: ui_mainwindow.h
